// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GatsbyLink renders correctly 1`] = `
.emotion-0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: inset 0 -1px 0 0 rgba(0,0,0,0.5);
}

.emotion-0:hover {
  box-shadow: inset 0 -2px 0 0 rgba(0,0,0,0.7);
}

@media (prefers-color-scheme:dark) {
  .emotion-0 {
    box-shadow: inset 0 -1px 0 0 rgba(255,255,255,0.5);
  }

  .emotion-0:hover {
    box-shadow: inset 0 -2px 0 0 rgba(255,255,255,0.7);
  }
}

<a
  className="emotion-0"
  href="/test"
>
  Test Gatsby Link
</a>
`;

exports[`Link renders correctly 1`] = `
.emotion-0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: inset 0 -1px 0 0 rgba(0,0,0,0.5);
}

.emotion-0:hover {
  box-shadow: inset 0 -2px 0 0 rgba(0,0,0,0.7);
}

@media (prefers-color-scheme:dark) {
  .emotion-0 {
    box-shadow: inset 0 -1px 0 0 rgba(255,255,255,0.5);
  }

  .emotion-0:hover {
    box-shadow: inset 0 -2px 0 0 rgba(255,255,255,0.7);
  }
}

<a
  className="emotion-0"
  href="/test"
>
  Test Link
</a>
`;
